Completion of handakuten kana and kogaki kana.

--- a/hentaigana.dict.yaml
+++ b/hentaigana.dict.yaml
@@ -26,11 +26,15 @@ min_phrase_weight: 100
 〴	onj
 〵	onj
 〳〵	vertonj
+〱	vertonj
+〲	vertonjdaku
 〴〵	vertonjdaku
 ヿ	koto
 ゟ	yori
 𬼂	nari
 𬼀	site
+乄	sime
+〆	sime
 𪜈	tomo
 𪜈゙	domo
 ゛	dakuten
@@ -116,10 +120,14 @@ min_phrase_weight: 100
 ろ	ro
 ゎ	xwa
 わ	wa
+𛅐	xwi
 ゐ	wi
+𛅑	xwe
 ゑ	we
+𛅒	xwo
 を	wo
 ん	nn
+𛅧	xnn
 ゔ	vu
 ァ	xa
 ア	a
@@ -238,7 +246,10 @@ min_phrase_weight: 100
 ワ	wa
 ヮ	xwa
 ヰ	wi
+𛅤	xwi
 ヱ	we
+𛅥	xwe
+𛅦	xwo
 ヲ	wo
 ン	n
 ヴ	vu
@@ -250,9 +261,13 @@ min_phrase_weight: 100
 ヴェ	ve
 ヴォ	vo
 ヷ	va
+わ゙	va
 ヸ	vi
+ゐ゙	vi
 ヹ	ve
+ゑ゙	ve
 ヺ	vo
+を゙	vo
 ファ	fa
 フィ	fi
 フェ	fe
@@ -268,6 +283,16 @@ min_phrase_weight: 100
 ク゚	ngu
 ケ゚	nge
 コ゚	ngo
+ウ゚	ng
+う゚	ng
+サ゚	tsa
+さ゚	tsa
+ツ゚	tu
+つ゚	tu
+ト゚	tu
+と゚	tu
+セ゚	tse
+せ゚	tse
 ティ	ti
 ディ	di
 シェ	she
@@ -493,7 +518,6 @@ min_phrase_weight: 100
 𛀌	u
 𛀍	u
 𛀎	u
-𛀁	e
 𛀁	ye
 𛀏	e
 𛀐	e
